# SLR-parser

./: .gitignore  CMakeLists.txt  README.md  makefile
app/: lex.yy.c  lexer
data/: grammar.txt  input.txt  lexer.l  slr_cache.json  states.json
src/: generate_tokens.rb  grammar_gen.rb  lexer.cpp  lexer.hpp  main.cpp  token_utils.hpp  tokens_def.rb
src/SLR/: CMakeLists.txt  main.cpp  slr_parser.cpp  slr_parser.hpp  slr_parser_dump.cpp  table_builder.cpp  table_builder.hpp
src/grammar/: CmakeLists.txt  dbg_utils.hpp  first_follow.cpp  first_follow.hpp  follow_set.cpp  item.hpp  items.cpp  log.txt  main.cpp  rule.hpp  rules.hpp  slr_parser.cpp  slr_parser.hpp  symbol_utils.cpp  symbol_utils.hpp  table_builder.cpp  table_builder.hpp
src/grammar/data/: actions.csv  states.dot
src/lexer/: CMakeLists.txt  generate_tokens.rb  lexer.cpp  lexer.hpp  lexer.l  lexer_defs.hpp  lexer_global.cpp  main.cpp  test.cpp  token_struct.hpp  token_type.hpp  tokens.h  tokens.hpp  tokens_def.rb
tests/: CMakeLists.txt  parser_e2e_test.cpp
